--- a/AndroidProject/app/src/main/res/values/strings.xml
+++ b/AndroidProject/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Android Project</string>
     <string name="Mainview">Matchs</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
