--- a/AndroidProject/app/src/main/res/values/strings.xml
+++ b/AndroidProject/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Android Project</string>
     <string name="Mainview">Matchs</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps_activityfor_main">Map</string>
 </resources>
