--- a/AndroidProject/app/src/main/res/values/strings.xml
+++ b/AndroidProject/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_maps_activityfor_main">Map</string>
     <string name="google_maps_key">AIzaSyDz3GRDXVajLbMI7wTxbqkhKIrlYnOkI0M</string>
+    <string name="title_activity_camera">Camera</string>
 </resources>
