--- a/AndroidProject/app/src/main/res/values-b+fr/strings.xml
+++ b/AndroidProject/app/src/main/res/values-b+fr/strings.xml
@@ -15,6 +15,7 @@
 
     <string name="backButton">retour</string>
     <string name="chooseDate">Choisir une date</string>
+    <string name="noMatch">Pas de match en BDD</string>
 
     <string name="teamSuccess">"Equipe enregistrée avec succès"</string>
     <string name="scoreSuccess">"Stats enregistrée avec succès"</string>
